# INF1771-trabs

./: .gitignore  README.md
trab1/: CMakeLists.txt
trab1/assets/: houses.txt  items.txt  knights.txt  map.txt
trab1/cmake/: FindSDL2.cmake
trab1/src/: houses.cpp  houses.h  item.cpp  item.h  items.cpp  items.h  knights.cpp  knights.h  main.cpp  map.cpp  map.h  painter.cpp  painter.h  player.cpp  player.h  position.h  thing.h  tile.cpp  tile.h  window.cpp  window.h
trab2/: helpers.lua  parser.lua  words.lua
trab2/dataset/: reviews_test.arff
trab2/results/: ibk_200_buffer  j48_200_buffer  multilayerperceptron_200_buffer  smo_200_buffer
